[build-system]
requires = [ "setuptools>=61.2",]
build-backend = "setuptools.build_meta"

[project]
name = "django-tempus-dominus-6"
version = "0.1.0"
description = "A Django widget for the Tempus Dominus Bootstrap 6 DateTime picker."
keywords = [ "static", "build",]
readme = "README.md"
classifiers = [ 
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
    "Framework :: Django",
    "Framework :: Django :: 2.2",
    "Framework :: Django :: 3",
    "Framework :: Django :: 4",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content"
    ]
dependencies = [ 
        "django>=3.2", 
    ]

[[project.authors]]
name = "Steve Bradshaw"
email = "steve@pcfive.co.uk"

[project.license]
text = "MIT"

[project.urls]
Homepage = "https://github.com/st8st8/django-tempus-dominus"



[tool.setuptools]
include-package-data = false
packages = [ "tempus_dominus_6"]

[tool.setuptools.package-data]
tempus_dominus_6 = [ "templates/*.html", "templates/tempus_dominus_6/*.html"]
